Fill in more metadata

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,14 +12,14 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Life and Opinions of Tristram Shandy, Gentleman</i><br/>
-			was published in YEAR by<br/>
+			was published between 1759 and 1767 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Laurence_Sterne">Laurence Sterne</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://www.robinwhittleton.com">Robin Whittleton</a>,<br/>
 			and is based on a transcription produced in 2012 by<br/>
-			<b class="name">TRANSCRIBER_1</b>, <b class="name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b class="name">Louise Hope</b>, <b class="name">Malcolm Farmer</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/39270">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
