--- a/src/epub/text/part-4.xhtml
+++ b/src/epub/text/part-4.xhtml
@@ -47,7 +47,7 @@
 				<tr>
 					<td>
 						<p>
-							<i>Miles peregrini in faciem suspexit——DÃ® boni, nova forma nasi!</i>
+							<i>Miles peregrini in faciem suspexit——Dî boni, nova forma nasi!</i>
 						</p>
 					</td>
 					<td>
@@ -307,7 +307,7 @@
 				<tr>
 					<td>
 						<p>
-							<i>Dolus inest, anime mÃ®, ait hospes—nasus est falsus.</i>
+							<i>Dolus inest, anime mî, ait hospes—nasus est falsus.</i>
 						</p>
 					</td>
 					<td>
@@ -429,7 +429,7 @@
 			<p>The only objection to this was, that if it proved anything, it proved the stranger’s nose was neither true nor false.</p>
 			<p>This left room for the controversy to go on. It was maintained by the advocates of the ecclesiastic court, that there was nothing to inhibit a decree, since the stranger <i>ex mero motu</i> had confessed he had been at the Promontory of Noses, and had got one of the goodliest, &amp;c. &amp;c.———To this it was answered, it was impossible there should be such a place as the Promontory of Noses, and the learned be ignorant where it lay. The commissary of the bishop of <i>Strasburg</i> undertook the advocates, explained this matter in a treatise upon proverbial phrases, shewing them, that the Promontory of Noses was a mere allegorick expression, importing no more than that nature had given him a long nose: in proof of which, with great learning, he cited the underwritten authorities,<a href="endnotes.xhtml#note-12" id="noteref-12" epub:type="noteref">12</a> which had decided the point incontestably, had it not appeared that a dispute about some franchises of dean and chapter-lands had been determined by it nineteen years before.</p>
 			<p>It happened——I must not say unluckily for Truth, because they were giving her a lift another way in so doing; that the two universities of <i>Strasburg</i>——the <i>Lutheran</i>, founded in the year 1538 by <i>Jacobus Surmis</i>, counsellor of the senate,——and the <i>Popish</i>, founded by <i>Leopold</i>, arch-duke of <i>Austria</i>, were, during all this time, employing the whole depth of their knowledge (except just what the affair of the abbess of <i>Quedlingberg’s</i> placket-holes required)——in determining the point of <i>Martin Luther’s</i> damnation.</p>
-			<p>The <i>Popish</i> doctors had undertaken to demonstrate <i>Ã priori</i>, that from the necessary influence of the planets on the twenty-second day of <i>October</i> 1483———when the moon was in the twelfth house, <i>Jupiter</i>, <i>Mars</i>, and <i>Venus</i> in the third, the <i>Sun</i>, <i>Saturn</i>, and <i>Mercury</i>, all got together in the fourth—that he must in course, and unavoidably, be a damn’d man—and that his doctrines, by a direct corollary, must be damn’d doctrines too.</p>
+			<p>The <i>Popish</i> doctors had undertaken to demonstrate <i>à priori</i>, that from the necessary influence of the planets on the twenty-second day of <i>October</i> 1483———when the moon was in the twelfth house, <i>Jupiter</i>, <i>Mars</i>, and <i>Venus</i> in the third, the <i>Sun</i>, <i>Saturn</i>, and <i>Mercury</i>, all got together in the fourth—that he must in course, and unavoidably, be a damn’d man—and that his doctrines, by a direct corollary, must be damn’d doctrines too.</p>
 			<p>By inspection into his horoscope, where five planets were in coition all at once with Scorpio<a href="endnotes.xhtml#note-13" id="noteref-13" epub:type="noteref">13</a> (in reading this my father would always shake his head) in the ninth house, which the <i>Arabians</i> allotted to religion—it appeared that <i>Martin Luther</i> did not care one stiver about the matter———and that from the horoscope directed to the conjunction of <i>Mars</i>—they made it plain likewise he must die cursing and blaspheming——with the blast of which his soul (being steep’d in guilt) sailed before the wind, in the lake of hell-fire.</p>
 			<p>The little objection of the <i>Lutheran</i> doctors to this, was, that it must certainly be the soul of another man, born <i>Oct.</i> 22, 83, which was forced to sail down before the wind in that manner—inasmuch as it appeared from the register of <i>Islaben</i> in the county of <i>Mansfelt</i>, that <i>Luther</i> was not born in the year 1483, but in 84; and not on the 22d day of <i>October</i>, but on the 10th of <i>November</i>, the eve of <i>Martinmas</i> day, from whence he had the name of <i>Martin</i>.</p>
 			<p>[——I must break off my translation for a moment; for if I did not, I know I should no more be able to shut my eyes in bed, than the abbess of <i>Quedlingberg</i>——It is to tell the reader, that my father never read this passage of <i>Slawkenbergius</i> to my uncle <i>Toby</i>, but with triumph———not over my uncle <i>Toby</i>, for he never opposed him in it——but over the whole world.</p>
