--- a/src/epub/text/part-5.xhtml
+++ b/src/epub/text/part-5.xhtml
@@ -8,6 +8,19 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-5" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">V</span></h2>
+			<blockquote epub:type="epigraph">
+				<p>Dixero si quid fortè jocosius, hoc mihi juris
+					<br/>Cum venia dabis.——</p>
+				<cite>Hor.</cite>
+			</blockquote>
+			<blockquote epub:type="epigraph">
+				<p>—Si quis calumnietur levius esse quam decet theologum, aut mordacius quam deceat Christianum—non Ego, sed Democritus dixit.—</p>
+				<cite>Erasmus</cite>
+			</blockquote>
+			<blockquote epub:type="epigraph">
+				<p>Si quis Clericus, aut Monachus, verba joculatoria, risum moventia, sciebat, anathema esto.—</p>
+				<cite>Second Council of Carthage</cite>
+			</blockquote>
 		</section>
 	</body>
 </html>
