Add epigrams and dedication to part 9

--- a/src/epub/text/part-9.xhtml
+++ b/src/epub/text/part-9.xhtml
@@ -8,6 +8,13 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-9" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">IX</span></h2>
+			<blockquote epub:type="epigraph">
+				<p>Non enim excursus hic ejus, sed opus ipsum est.</p>
+				<cite>Plin. Lib. v. Epist. 6</cite>
+			</blockquote>
+			<blockquote epub:type="epigraph">
+				<p>Si quid urbaniusculè lusum a nobis, per Musas et Charitas et omnium poëtarum Numina, Oro te, ne me malè capias.</p>
+			</blockquote>
 		</section>
 	</body>
 </html>
