Remove corrections markup
Go with the Gutenberg choices.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -13,7 +13,7 @@
 					<p>It is perhaps barely necessary to observe that the parallel does not extend to a further parallel between republication and tale-bearing. Once published, the thing is public. <a href="introduction.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:——But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733,—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,——that baptism shall, nevertheless, be administered to it by injection,—<i>par le moyen d’une petite canulle</i>,—Anglicè <i>a squirt</i>.——’Tis very strange that St. <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity,—should, after so much pains bestowed upon this,—give up the point at last, as a second <i>La chose impossible</i>,—“Infantes in maternis uteris existentes (quoth <ins class="correction" title=". missing">St.</ins> <i>Thomas!</i>) baptizari possunt <i>nullo modo</i>.”—O <i>Thomas! Thomas!</i></p>
+					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:——But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733,—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,——that baptism shall, nevertheless, be administered to it by injection,—<i>par le moyen d’une petite canulle</i>,—Anglicè <i>a squirt</i>.——’Tis very strange that St. <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity,—should, after so much pains bestowed upon this,—give up the point at last, as a second <i>La chose impossible</i>,—“Infantes in maternis uteris existentes (quoth St. <i>Thomas!</i>) baptizari possunt <i>nullo modo</i>.”—O <i>Thomas! Thomas!</i></p>
 					<p>If the reader has the curiosity to see the question upon baptism <i>by injection</i>, as presented to the Doctors of the <i>Sorbonne</i>, with their consultation thereupon, it is as follows.</p>
 					<p><a href="chapter-1-20.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
@@ -21,7 +21,7 @@
 					<p>Vide Deventer, Paris <abbr>edit.</abbr>, 4to, 1734, <abbr>p.</abbr> 366. <a href="chapter-1-20.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p><ins class="correction" title="text unchanged: expected form is ‘pantagraph’">Pentagraph</ins>, an instrument to copy Prints and Pictures mechanically, and in any proportion. <a href="chapter-1-23.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>Pentagraph, an instrument to copy Prints and Pictures mechanically, and in any proportion. <a href="chapter-1-23.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
 					<p>The author is here twice mistaken; for <i>Lithopædus</i> should be wrote thus, <i>Lithopædii Senonensis Icon</i>. The second mistake is, that this <i>Lithopædus</i> is not an author, but a drawing of a petrified child. The account of this, published by <i>Athosius</i> 1580, may be seen at the end of <i>Cordæus’s</i> works in <i>Spachius</i>. Mr. <i>Tristram Shandy</i> has been led into this error, either from seeing <i>Lithopædus’s</i> name of late in a catalogue of learned writers in Dr. ——, or by mistaking <i>Lithopædus</i> for <i>Trinecavellius</i>,——from the too great similitude of the names. <a href="chapter-2-19.xhtml#noteref-5" epub:type="backlink">↩</a></p>
@@ -95,7 +95,7 @@
 					<p>Mr. <i>Shandy</i> is supposed to mean ******** *** Esq.; member for ******, ——and not the <i>Chinese</i> Legislator. <a href="chapter-5-25.xhtml#noteref-25" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="endnote">
-					<p><span class="greek" title="Chalepês nosou, kai dusiatou apallagên, hên anthraka kalousin.">Χαλεπῆς νόσου, καὶ δυσιάτου <ins class="correction" title="printed ἀπαλλαγὴ [apallagê]">ἀπαλλαγὴν</ins>, ἣν ἄνθρακα καλοῦσιν.</span>—<span class="smallcaps">Philo</span>. <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<p><span class="greek" title="Chalepês nosou, kai dusiatou apallagên, hên anthraka kalousin.">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</span>—<span class="smallcaps">Philo</span>. <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="endnote">
 					<p><span class="greek" title="Ta temnomena tôn ethnôn polugonôtata, kai poluanthrôpotata einai.">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</span> <a href="chapter-5-28.xhtml#noteref-27" epub:type="backlink">↩</a></p>
