Verse markup and styling

--- a/src/epub/text/slawkenbergius-en.xhtml
+++ b/src/epub/text/slawkenbergius-en.xhtml
@@ -146,18 +146,29 @@
 				<p class="space">She could proceed no farther.</p>
 				<p><i>Slawkenbergius</i> supposes the word intended was <i>unconvinced</i>, but her strength would not enable her to finish her letter.</p>
 				<p>The heart of the courteous <i>Diego</i> overflowed as he read the letter———he ordered his mule forthwith and <i>Fernandez’s</i> horse to be saddled; and as no vent in prose is equal to that of poetry in such conflicts——chance, which as often directs us to remedies as to <i>diseases</i>, having thrown a piece of charcoal into the window——<i>Diego</i> availed himself of it, and whilst the hostler was getting ready his mule, he eased his mind against the wall as follows.</p>
-				<div class="verse ital">
-					<h5>ODE</h5>
-					<p>Harsh and untuneful are the notes of love,</p>
-					<p class="indent">Unless my <em>Julia</em> strikes the key,</p>
-					<p>Her hand alone can touch the part,</p>
-					<p class="indent">Whose dulcet move-</p>
-					<p class="indent2">ment charms the heart,</p>
-					<p>And governs all the man with sympathetick sway.</p>
-					<h5 class="final">2d</h5>
-				</div>
-				<p class="plain">O Julia!</p>
-				<p class="space">The lines were very natural——for they were nothing at all to the purpose, says <i>Slawkenbergius</i>, and ’tis a pity there were no more of them; but whether it was that Seig. <i>Diego</i> was slow in composing verses—or the hostler quick in saddling mules——is not averred; certain it was, that <i>Diego’s</i> mule and <i>Fernandez’s</i> horse were ready at the door of the inn, before <i>Diego</i> was ready for his second stanza; so without staying to finish his ode, they both mounted, sallied forth, passed the <i>Rhine</i>, traversed <i>Alsace</i>, shaped their course towards <i>Lyons</i>, and before the <i>Strasburgers</i> and the abbess of <i>Quedlingberg</i> had set out on their cavalcade, had <i>Fernandez</i>, <i>Diego</i>, and his <i>Julia</i>, crossed the <i>Pyrenean</i> mountains, and got safe to <i>Valadolid</i>.</p>
+				<blockquote epub:type="z3998:verse">
+					<header>
+						<p>Ode</p>
+					</header>
+					<p>
+						<span>Harsh and untuneful are the notes of love,</span>
+						<br/>
+						<span class="i1">Unless my <em>Julia</em> strikes the key,</span>
+						<br/>
+						<span>Her hand alone can touch the part,</span>
+						<br/>
+						<span class="i1">Whose dulcet move-</span>
+						<br/>
+						<span class="i2">ment charms the heart,</span>
+						<br/>
+						<span>And governs all the man with sympathetick sway.</span>
+					</p>
+					<footer>
+						<p>2d</p>
+					</footer>
+				</blockquote>
+				<p>O Julia!</p>
+				<p>The lines were very natural——for they were nothing at all to the purpose, says <i>Slawkenbergius</i>, and ’tis a pity there were no more of them; but whether it was that Seig. <i>Diego</i> was slow in composing verses—or the hostler quick in saddling mules——is not averred; certain it was, that <i>Diego’s</i> mule and <i>Fernandez’s</i> horse were ready at the door of the inn, before <i>Diego</i> was ready for his second stanza; so without staying to finish his ode, they both mounted, sallied forth, passed the <i>Rhine</i>, traversed <i>Alsace</i>, shaped their course towards <i>Lyons</i>, and before the <i>Strasburgers</i> and the abbess of <i>Quedlingberg</i> had set out on their cavalcade, had <i>Fernandez</i>, <i>Diego</i>, and his <i>Julia</i>, crossed the <i>Pyrenean</i> mountains, and got safe to <i>Valadolid</i>.</p>
 				<p>’Tis needless to inform the geographical reader, that when <i>Diego</i> was in <i>Spain</i>, it was not possible to meet the courteous stranger in the <i>Frankfort</i> road; it is enough to say, that of all restless desires, curiosity being the strongest——the <i>Strasburgers</i> felt the full force of it; and that for three days and nights they were tossed to and fro in the <i>Frankfort</i> road, with the tempestuous fury of this passion, before they could submit to return home.——When alas! an event was prepared for them, of all other, the most grievous that could befal a free people.</p>
 				<p>As this revolution of the <i>Strasburgers’</i> affairs is often spoken of, and little understood, I will, in ten words, says <i>Slawkenbergius</i>, give the world an explanation of it, and with it put an end to my tale.</p>
 				<p>Every body knows of the grand system of Universal Monarchy, wrote by order of Mons. <i>Colbert</i>, and put in manuscript into the hands of <i>Lewis</i> the fourteenth, in the year 1664.</p>
