--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -95,16 +95,16 @@
 					<p>Mr. <i>Shandy</i> is supposed to mean ******** *** Esq.; member for ******, ——and not the <i>Chinese</i> Legislator. <a href="chapter-5-25.xhtml#noteref-25" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-26" epub:type="endnote">
-					<p><span class="greek" title="Chalepês nosou, kai dusiatou apallagên, hên anthraka kalousin.">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</span>—<span class="smallcaps">Philo</span>. <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<p><span class="greek" title="Chalepês nosou, kai dusiatou apallagên, hên anthraka kalousin.">Χαλεπῆς νόσου, καὶ δυσιάτου ἀπαλλαγὴν, ἣν ἄνθρακα καλοῦσιν.</span>—<b>Philo</b>. <a href="chapter-5-28.xhtml#noteref-26" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="endnote">
 					<p><span class="greek" title="Ta temnomena tôn ethnôn polugonôtata, kai poluanthrôpotata einai.">Τὰ τεμνόμενα τῶν ἐθνῶν τολυγονώτατα, καὶ πολυανθρωπότατα εἶναι.</span> <a href="chapter-5-28.xhtml#noteref-27" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-28" epub:type="endnote">
-					<p><span class="greek" title="Kathariotêtos heineken.">Καθαριότητος εἵνεκεν.</span>—<span class="smallcaps">Bochart</span>. <a href="chapter-5-28.xhtml#noteref-28" epub:type="backlink">↩</a></p>
+					<p><span class="greek" title="Kathariotêtos heineken.">Καθαριότητος εἵνεκεν.</span>—<b>Bochart</b>. <a href="chapter-5-28.xhtml#noteref-28" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-29" epub:type="endnote">
-					<p><span class="greek" title="Ho Ilos, ta aidoia peritemnetai, tauto poiêsai kai tous ham’ autô summachous katanankasas.">Ὁ Ἶλος, τὰ αἰδοῖα περιτέμνεται, ταὐτὸ ποιῆσαι καὶ τοὺς ἅμ’ αυτῷ συμμάχους καταναγκάσας.</span>—<span class="smallcaps">Sanchuniatho.</span> <a href="chapter-5-28.xhtml#noteref-29" epub:type="backlink">↩</a></p>
+					<p><span class="greek" title="Ho Ilos, ta aidoia peritemnetai, tauto poiêsai kai tous ham’ autô summachous katanankasas.">Ὁ Ἶλος, τὰ αἰδοῖα περιτέμνεται, ταὐτὸ ποιῆσαι καὶ τοὺς ἅμ’ αυτῷ συμμάχους καταναγκάσας.</span>—<b>Sanchuniatho.</b> <a href="chapter-5-28.xhtml#noteref-29" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-30" epub:type="endnote">
 					<p>In the first edition, the sixth volume began with this chapter. <a href="chapter-6-1.xhtml#noteref-30" epub:type="backlink">↩</a></p>
