--- a/src/epub/text/part-3.xhtml
+++ b/src/epub/text/part-3.xhtml
@@ -9,7 +9,7 @@
 		<section id="part-3" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">III</span></h2>
 			<p class="deephang small">Multitudinis imperitæ non formido judicia; meis tamen, rogo, parcant opusculis———in quibus fuit propositi semper, a jocis ad seria, a seriis vicissim ad jocos transire.</p>
-			<p class="right small">—<span class="smallcaps">Joan. Saresberiensis</span>, <i>Episcopus Lugdun.</i></p>
+			<p class="right small">—<b>Joan. Saresberiensis</b>, <i>Episcopus Lugdun.</i></p>
 		</section>
 	</body>
 </html>
