Split part 3 chapter 11 into latin and english chapters
We can’t replicate the side-by-side layout of the original text in an ebook format.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -30,7 +30,7 @@
 					<p>Vide <a href="chapter-2-18.xhtml">book 2, chapter 18</a>. <a href="chapter-3-1.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-7" epub:type="endnote">
-					<p>As the genuineness of the consultation of the <i>Sorbonne</i> upon the question of baptism, was doubted by some, and denied by others——’twas thought proper to print the original of this excommunication; for the copy of which Mr. <i>Shandy</i> returns thanks to the chapter clerk of the dean and chapter of <i>Rochester</i>. <a href="chapter-3-11.xhtml#noteref-7" epub:type="backlink">↩</a></p>
+					<p>As the genuineness of the consultation of the <i>Sorbonne</i> upon the question of baptism, was doubted by some, and denied by others——’twas thought proper to print the original of this excommunication; for the copy of which Mr. <i>Shandy</i> returns thanks to the chapter clerk of the dean and chapter of <i>Rochester</i>. <a href="chapter-3-11-la.xhtml#noteref-7" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-8" epub:type="endnote">
 					<p>Vide Locke. <a href="chapter-3-18.xhtml#noteref-8" epub:type="backlink">↩</a></p>
