--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -13,6 +13,9 @@
 					<li>
 						<a href="chapter-1-12.xhtml#illustration-1">An illustration of a black tombstone.</a>
 					</li>
+					<li>
+						<a href="chapter-9-4.xhtml#illustration-2">A squiggly line that indicates the corporal’s flourish.</a>
+					</li>
 				</ol>
 			</nav>
 		</section>
