--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -14,7 +14,13 @@
 						<a href="chapter-1-12.xhtml#illustration-1">An illustration of a black tombstone.</a>
 					</li>
 					<li>
-						<a href="chapter-9-4.xhtml#illustration-2">A squiggly line that indicates the corporal’s flourish.</a>
+						<a href="chapter-6-40.xhtml#illustration-2">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”.</a>
+					</li>
+					<li>
+						<a href="chapter-6-40.xhtml#illustration-3">A squiggly line marked A, B, CC CCC, D.</a>
+					</li>
+					<li>
+						<a href="chapter-9-4.xhtml#illustration-4">A squiggly line that indicates the corporal’s flourish.</a>
 					</li>
 				</ol>
 			</nav>
