Add the marbled page.
The image comes from another edition of Tristram Shandy that was scanned in colour, and can be found at https://archive.org/details/lifeopinionsoftr02stern/page/24.

--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -14,13 +14,16 @@
 						<a href="chapter-1-12.xhtml#illustration-1">An illustration of a black tombstone.</a>
 					</li>
 					<li>
-						<a href="chapter-6-40.xhtml#illustration-2">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”.</a>
+						<a href="chapter-3-36.xhtml#illustration-2">A marbled page.</a>
 					</li>
 					<li>
-						<a href="chapter-6-40.xhtml#illustration-3">A squiggly line marked A, B, CC CCC, D.</a>
+						<a href="chapter-6-40.xhtml#illustration-3">Squiggly lines captioned “Inv. T. S. / Scul. T. S.”.</a>
 					</li>
 					<li>
-						<a href="chapter-9-4.xhtml#illustration-4">A squiggly line that indicates the corporal’s flourish.</a>
+						<a href="chapter-6-40.xhtml#illustration-4">A squiggly line marked A, B, CC CCC, D.</a>
+					</li>
+					<li>
+						<a href="chapter-9-4.xhtml#illustration-5">A squiggly line that indicates the corporal’s flourish.</a>
 					</li>
 				</ol>
 			</nav>
