--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -45,7 +45,7 @@
 					<p>Mr. <i>Shandy’s</i> compliments to orators——is very sensible that <i>Slawkenbergius</i> has here changed his metaphor———which he is very guilty of:——that as a translator, Mr. <i>Shandy</i> has all along done what he could to make him stick to it—but that here ’twas impossible. <a href="slawkenbergius-en.xhtml#noteref-11" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-12" epub:type="endnote">
-					<p>Nonnulli ex nostratibus eadem loquendi formulâ utun. Quinimo &amp; Logistæ &amp; Canonistæ——Vid. Parce Barne Jas in d. L. Provincial. Constitut. de conjec. vid. Vol. Lib. 4. Titul. 1. n. 7. quâ etiam in re conspir. Om de Promontorio Nas. Tichmak. ff. d. tit. 3. fol. 189. passim. Vid. Glos. de contrahend. empt, &amp;c. necnon J. Scrudr, in cap. § refut. per totum. Cum his cons. Rever. J. Tubal, Sentent. &amp; Prov. cap. 9. ff. 11, 12. obiter. V. &amp; Librum, cui Tit. de Terris &amp; Phras. Belg. ad finem, cum comment, N. Bardy Belg. Vid. Scrip. Argentotarens. de Antiq. Ecc. in Episc. Archiv. fid coll. per Von Jacobum Koinshoven Folio Argent. 1583. præcip. ad finem. Quibus add. Rebuff in L. obvenire de Signif. Nom. ff. fol. &amp; de jure Gent. &amp; Civil. de protib. aliena feud. per federa, test. Joha. Luxius in prolegom, quem velim videas, de Analy. Cap. 1, 2, 3. Vid. Idea. <a href="slawkenbergius-en.xhtml#noteref-12" epub:type="backlink">↩</a></p>
+					<p>Nonnulli ex nostratibus eadem loquendi formulâ utun. Quinimo &amp; Logistæ &amp; Canonistæ——Vid. Parce Barne Jas in d. L. Provincial. Constitut. de conjec. vid. Vol. Lib. 4. Titul. 1. n. 7. quâ etiam in re conspir. Om de Promontorio Nas. Tichmak. ff. d. tit. 3. fol. 189. passim. Vid. Glos. de contrahend. empt, etc. necnon J. Scrudr, in cap. § refut. per totum. Cum his cons. Rever. J. Tubal, Sentent. &amp; Prov. cap. 9. ff. 11, 12. obiter. V. &amp; Librum, cui Tit. de Terris &amp; Phras. Belg. ad finem, cum comment, N. Bardy Belg. Vid. Scrip. Argentotarens. de Antiq. Ecc. in Episc. Archiv. fid coll. per Von Jacobum Koinshoven Folio Argent. 1583. præcip. ad finem. Quibus add. Rebuff in L. obvenire de Signif. Nom. ff. fol. &amp; de jure Gent. &amp; Civil. de protib. aliena feud. per federa, test. Joha. Luxius in prolegom, quem velim videas, de Analy. Cap. 1, 2, 3. Vid. Idea. <a href="slawkenbergius-en.xhtml#noteref-12" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-13" epub:type="endnote">
 					<blockquote>
@@ -110,7 +110,7 @@
 					<p>In the first edition, the sixth volume began with this chapter. <a href="chapter-6-1.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p>Nous aurions quelque interêt, says <i>Baillet</i>, de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <i>neuf</i> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.——Le tour est ingénieux, &amp;c. &amp;c. <a href="chapter-6-2.xhtml#noteref-31" epub:type="backlink">↩</a></p>
+					<p>Nous aurions quelque interêt, says <i>Baillet</i>, de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <i>neuf</i> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.——Le tour est ingénieux, etc. etc. <a href="chapter-6-2.xhtml#noteref-31" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-32" epub:type="endnote">
 					<p>Vid. <i>Pellegrina</i>. <a href="chapter-6-5.xhtml#noteref-32" epub:type="backlink">↩</a></p>
@@ -122,7 +122,7 @@
 					<p>Vid. Book of French post roads, page 36, edition of 1762. <a href="chapter-7-10.xhtml#noteref-34" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-35" epub:type="endnote">
-					<p>Chief Magistrate in Toulouse, &amp;c. &amp;c. &amp;c. <a href="chapter-7-17.xhtml#noteref-35" epub:type="backlink">↩</a></p>
+					<p>Chief Magistrate in Toulouse, etc. etc. etc. <a href="chapter-7-17.xhtml#noteref-35" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-36" epub:type="endnote">
 					<p>Non orbis gentem, non urbem gens habet ullam</p>
@@ -144,7 +144,7 @@
 					<p><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.——I know not who. <a href="chapter-8-24.xhtml#noteref-41" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-42" epub:type="endnote">
-					<p>This will be printed with my father’s Life of <i>Socrates</i>, &amp;c. &amp;c. <a href="chapter-8-26.xhtml#noteref-42" epub:type="backlink">↩</a></p>
+					<p>This will be printed with my father’s Life of <i>Socrates</i>, etc. etc. <a href="chapter-8-26.xhtml#noteref-42" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-43" epub:type="endnote">
 					<p>Mr. <i>Shandy</i> must mean the poor <i>in spirit</i>; inasmuch as they divided the money amongst themselves. <a href="chapter-8-26.xhtml#noteref-43" epub:type="backlink">↩</a></p>
