Standardise br indentation

--- a/src/epub/text/part-5.xhtml
+++ b/src/epub/text/part-5.xhtml
@@ -9,8 +9,8 @@
 		<section id="part-5" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">V</span></h2>
 			<blockquote epub:type="epigraph">
-				<p>Dixero si quid fortè jocosius, hoc mihi juris
-					<br/>Cum venia dabis.——</p>
+				<p>Dixero si quid fortè jocosius, hoc mihi juris<br/>
+					Cum venia dabis.——</p>
 				<cite>Hor.</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
