--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -11,7 +11,11 @@
 			<p><b>Sir</b>,—Never poor Wight of a Dedicator had less hopes from his Dedication, than I have from this of mine; for it is written in a bye corner of the kingdom, and in a retir’d thatch’d house, where I live in a constant endeavour to fence against the infirmities of ill health, and other evils of life, by mirth; being firmly persuaded that every time a man smiles,——but much more so, when he laughs, it adds something to this Fragment of Life.</p>
 			<p>I humbly beg, Sir, that you will honour this book, by taking it——(not under your Protection,——it must protect itself, but)——into the country with you; where, if I am ever told, it has made you smile; or can conceive it has beguiled you of one moment’s pain——I shall think myself as happy as a minister of state;———perhaps much happier than any one (one only excepted) that I have read or heard of.</p>
 			<footer>
-				<p>I am, <b>great sir</b>,<br/> (and what is more to your Honour)<br/> I am, <b>good sir</b>,<br/> Your Well-wisher, and<br/> most humble Fellow-subject,</p>
+				<p>I am, <b>great sir</b>,<br/>
+					(and what is more to your Honour)<br/>
+					I am, <b>good sir</b>,<br/>
+					Your Well-wisher, and<br/>
+					most humble Fellow-subject,</p>
 				<p><b>The Author</b>.</p>
 			</footer>
 		</section>
