--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -9,7 +9,8 @@
 		<section id="epigraph" epub:type="epigraph">
 			<blockquote>
 				<p>
-					<i xml:lang="el">Ταράσσει τοὺς Ἀνθρώπους οὐ τὰ Πράγματα,<br/> Ἀλλὰ τὰ περὶ τῶν Πραγμάτων Δόγματα.</i>
+					<i xml:lang="el">Ταράσσει τοὺς Ἀνθρώπους οὐ τὰ Πράγματα,<br/>
+						Ἀλλὰ τὰ περὶ τῶν Πραγμάτων Δόγματα.</i>
 				</p>
 			</blockquote>
 		</section>
