Better semantic markup for part content

--- a/src/epub/text/part-3.xhtml
+++ b/src/epub/text/part-3.xhtml
@@ -8,8 +8,12 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="part-3" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">III</span></h2>
-			<p class="deephang small">Multitudinis imperitæ non formido judicia; meis tamen, rogo, parcant opusculis⁠———in quibus fuit propositi semper, a jocis ad seria, a seriis vicissim ad jocos transire.</p>
-			<p class="right small">—<b>Joan. Saresberiensis</b>, <i>Episcopus Lugdun.</i></p>
+			<blockquote epub:type="epigraph">
+				<p>
+					<i xml:lang="la">Multitudinis imperitæ non formido judicia; meis tamen, rogo, parcant opusculis⁠———in quibus fuit propositi semper, a jocis ad seria, a seriis vicissim ad jocos transire.</i>
+				</p>
+				<cite>—<abbr class="name">Joan.</abbr> Saresberiensis, <i xml:lang="la">Episcopus Lugdun</i>.</cite>
+			</blockquote>
 		</section>
 	</body>
 </html>
