--- a/src/epub/text/part-5.xhtml
+++ b/src/epub/text/part-5.xhtml
@@ -9,16 +9,24 @@
 		<section id="part-5" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">V</span></h2>
 			<blockquote epub:type="epigraph">
-				<p>Dixero si quid fortè jocosius, hoc mihi juris<br/>
-					Cum venia dabis.⁠——</p>
-				<cite>Hor.</cite>
+				<p>
+					<i xml:lang="la">Dixero si quid fortè jocosius, hoc mihi juris<br/>
+						Cum venia dabis.⁠——</i>
+				</p>
+				<cite>
+					<abbr class="name">Hor.</abbr>
+				</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
-				<p>—Si quis calumnietur levius esse quam decet theologum, aut mordacius quam deceat Christianum⁠—non Ego, sed Democritus dixit.⁠—</p>
+				<p>
+					<i xml:lang="la">—Si quis calumnietur levius esse quam decet theologum, aut mordacius quam deceat Christianum⁠—non Ego, sed Democritus dixit.⁠—</i>
+				</p>
 				<cite>Erasmus</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
-				<p>Si quis Clericus, aut Monachus, verba joculatoria, risum moventia, sciebat, anathema esto.⁠—</p>
+				<p>
+					<i xml:lang="la">Si quis Clericus, aut Monachus, verba joculatoria, risum moventia, sciebat, anathema esto.⁠—</i>
+				</p>
 				<cite>Second Council of Carthage</cite>
 			</blockquote>
 		</section>
