--- a/src/epub/text/part-9-dedication.xhtml
+++ b/src/epub/text/part-9-dedication.xhtml
@@ -10,31 +10,31 @@
 			<section id="part-9-dedication" epub:type="dedication">
 				<h2 epub:type="title">A Dedication to a Great Man</h2>
 				<p><b>My Lord</b>,</p>
-				<p>Having, <i>a priori</i>, intended to dedicate <i>The Amours of my Uncle Toby</i> to <abbr>Mr.</abbr> ***⁠——I see more reasons, <i>a posteriori</i>, for doing it to Lord *******.</p>
-				<p>I should lament from my soul, if this exposed me to the jealousy of their Reverences; because <i>a posteriori</i>, in Court-latin, signifies the kissing hands for preferment⁠—or anything else⁠—in order to get it.</p>
+				<p>Having, <i xml:lang="la">a priori</i>, intended to dedicate <i epub:type="se:name.publication.book">The Amours of my Uncle Toby</i> to <abbr>Mr.</abbr> ***⁠——I see more reasons, <i xml:lang="la">a posteriori</i>, for doing it to Lord *******.</p>
+				<p>I should lament from my soul, if this exposed me to the jealousy of their Reverences; because <i xml:lang="la">a posteriori</i>, in Court-latin, signifies the kissing hands for preferment⁠—or anything else⁠—in order to get it.</p>
 				<p>My opinion of Lord ******* is neither better nor worse, than it was of <abbr>Mr.</abbr> ***. Honours, like impressions upon coin, may give an ideal and local value to a bit of base metal; but Gold and Silver will pass all the world over without any other recommendation than their own weight.</p>
 				<p>The same good-will that made me think of offering up half an hour’s amusement to <abbr>Mr.</abbr> *** when out of place⁠—operates more forcibly at present, as half an hour’s amusement will be more serviceable and refreshing after labour and sorrow, than after a philosophical repast.</p>
-				<p>Nothing is so perfectly <i>amusement</i> as a total change of ideas; no ideas are so totally different as those of Ministers, and innocent Lovers: for which reason, when I come to talk of Statesmen and Patriots, and set such marks upon them as will prevent confusion and mistakes concerning them for the future⁠—I propose to dedicate that Volume to some gentle Shepherd,</p>
+				<p>Nothing is so perfectly <em>amusement</em> as a total change of ideas; no ideas are so totally different as those of Ministers, and innocent Lovers: for which reason, when I come to talk of Statesmen and Patriots, and set such marks upon them as will prevent confusion and mistakes concerning them for the future⁠—I propose to dedicate that Volume to some gentle Shepherd,</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Whose thoughts proud Science never taught to stray,</span>
 						<br/>
 						<span>Far as the Statesman’s walk or Patriot-way;</span>
 						<br/>
-						<span>Yet <i>simple Nature</i> to his hopes had given</span>
+						<span>Yet <em>simple Nature</em> to his hopes had given</span>
 						<br/>
 						<span>Out of a cloud-capp’d head a humbler heaven;</span>
 						<br/>
-						<span>Some <i>untam’d</i> World in depths of wood embraced⁠—</span>
+						<span>Some <em>untam’d</em> World in depths of wood embraced⁠—</span>
 						<br/>
 						<span>Some happier Island in the watry-waste⁠—</span>
 						<br/>
 						<span>And where admitted to that equal sky,</span>
 						<br/>
-						<span>His <i>faithful Dog</i> should bear him company.</span>
+						<span>His <em>faithful Dog</em> should bear him company.</span>
 					</p>
 				</blockquote>
-				<p>In a word, by thus introducing an entire new set of objects to his Imagination, I shall unavoidably give a <i>Diversion</i> to his passionate and love-sick Contemplations. In the meantime,</p>
+				<p>In a word, by thus introducing an entire new set of objects to his Imagination, I shall unavoidably give a <em>Diversion</em> to his passionate and love-sick Contemplations. In the meantime,</p>
 				<footer>
 					<p>I am</p>
 					<p class="signature">The Author.</p>
