--- a/src/epub/text/part-9.xhtml
+++ b/src/epub/text/part-9.xhtml
@@ -9,11 +9,15 @@
 		<section id="part-9" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">IX</span></h2>
 			<blockquote epub:type="epigraph">
-				<p>Non enim excursus hic ejus, sed opus ipsum est.</p>
-				<cite>Plin. Lib. <span epub:type="z3998:roman">v</span>. Epist. 6</cite>
+				<p>
+					<i xml:lang="la">Non enim excursus hic ejus, sed opus ipsum est.</i>
+				</p>
+				<cite><abbr class="name">Plin.</abbr> <abbr>Lib.</abbr> <span epub:type="z3998:roman">v</span> <abbr>Epist.</abbr> 6</cite>
 			</blockquote>
 			<blockquote epub:type="epigraph">
-				<p>Si quid urbaniusculè lusum a nobis, per Musas et Charitas et omnium poëtarum Numina, Oro te, ne me malè capias.</p>
+				<p>
+					<i xml:lang="la">Si quid urbaniusculè lusum a nobis, per Musas et Charitas et omnium poëtarum Numina, Oro te, ne me malè capias.</i>
+				</p>
 			</blockquote>
 		</section>
 	</body>
