Fix a set of errors highlighted by the linter

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -260,7 +260,7 @@
 									<a href="text/chapter-3-27.xhtml" epub:type="z3998:roman">XXVII</a>
 								</li>
 								<li>
-									<a href="text/chapter-3-28.xhtml" epub:type="z3998:roman">XVIII</a>
+									<a href="text/chapter-3-28.xhtml" epub:type="z3998:roman">XXVIII</a>
 								</li>
 								<li>
 									<a href="text/chapter-3-29.xhtml" epub:type="z3998:roman">XXIX</a>
@@ -454,7 +454,7 @@
 									<a href="text/chapter-5-8.xhtml" epub:type="z3998:roman">VIII</a>
 								</li>
 								<li>
-									<a href="text/chapter-5-9.xhtml" epub:type="z3998:roman">I</a>
+									<a href="text/chapter-5-9.xhtml" epub:type="z3998:roman">IX</a>
 								</li>
 								<li>
 									<a href="text/chapter-5-10.xhtml" epub:type="z3998:roman">X</a>
@@ -553,7 +553,7 @@
 									<a href="text/chapter-5-41.xhtml" epub:type="z3998:roman">XLI</a>
 								</li>
 								<li>
-									<a href="text/chapter-5-42.xhtml" epub:type="z3998:roman">LXII</a>
+									<a href="text/chapter-5-42.xhtml" epub:type="z3998:roman">XLII</a>
 								</li>
 								<li>
 									<a href="text/chapter-5-43.xhtml" epub:type="z3998:roman">XLIII</a>
@@ -585,13 +585,13 @@
 									<a href="text/chapter-6-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Story of Le Fever Continued</a>
 								</li>
 								<li>
-									<a href="text/chapter-6-8.xhtml"><span epub:type="z3998:roman">VII</span>: The Story of Le Fever Continued</a>
+									<a href="text/chapter-6-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Story of Le Fever Continued</a>
 								</li>
 								<li>
 									<a href="text/chapter-6-9.xhtml" epub:type="z3998:roman">IX</a>
 								</li>
 								<li>
-									<a href="text/chapter-6-10.xhtml"><span epub:type="z3998:roman">VII</span>: The Story of Le Fever Continued</a>
+									<a href="text/chapter-6-10.xhtml"><span epub:type="z3998:roman">X</span>: The Story of Le Fever Continued</a>
 								</li>
 								<li>
 									<a href="text/chapter-6-11.xhtml" epub:type="z3998:roman">XI</a>
@@ -812,7 +812,7 @@
 									<a href="text/chapter-7-41.xhtml" epub:type="z3998:roman">XLI</a>
 								</li>
 								<li>
-									<a href="text/chapter-7-42.xhtml" epub:type="z3998:roman">LXII</a>
+									<a href="text/chapter-7-42.xhtml" epub:type="z3998:roman">XLII</a>
 								</li>
 								<li>
 									<a href="text/chapter-7-43.xhtml" epub:type="z3998:roman">XLIII</a>
