--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -13,7 +13,7 @@
 					<p>It is perhaps barely necessary to observe that the parallel does not extend to a further parallel between republication and tale-bearing. Once published, the thing is public. <a href="introduction.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;⁠—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:⁠——But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733,⁠—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,⁠——that baptism shall, nevertheless, be administered to it by injection,⁠—<i xml:lang="fr">par le moyen d’une petite canulle</i>,⁠—Anglicè <em>a squirt</em>.⁠——’Tis very strange that <abbr>St.</abbr> <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity,⁠—should, after so much pains bestowed upon this,⁠—give up the point at last, as a second <i xml:lang="fr">La chose impossible</i>,⁠—“Infantes in maternis uteris existentes (quoth <abbr>St.</abbr> <i>Thomas!</i>) baptizari possunt <i xml:lang="la">nullo modo</i>.”⁠—O <i>Thomas! Thomas!</i></p>
+					<p>The <i>Romish</i> Rituals direct the baptizing of the child, in cases of danger, <i>before</i> it is born;⁠—but upon this proviso, That some part or other of the child’s body be seen by the baptizer:⁠——But the Doctors of the <i>Sorbonne</i>, by a deliberation held amongst them, <i>April</i> 10, 1733,⁠—have enlarged the powers of the midwives, by determining, That though no part of the child’s body should appear,⁠——that baptism shall, nevertheless, be administered to it by injection,⁠—<i xml:lang="fr">par le moyen d’une petite canulle,⁠—Anglicè</i> <em>a squirt</em>.⁠——’Tis very strange that <abbr>St.</abbr> <i>Thomas Aquinas</i>, who had so good a mechanical head, both for tying and untying the knots of school-divinity,⁠—should, after so much pains bestowed upon this,⁠—give up the point at last, as a second <i xml:lang="fr">La chose impossible</i>,⁠—“<i xml:lang="la">Infantes in maternis uteris existentes (quoth <abbr>St.</abbr> <i>Thomas!</i>) baptizari possunt <em>nullo modo</em></i>.”⁠—O <i>Thomas! Thomas!</i></p>
 					<p>If the reader has the curiosity to see the question upon baptism <em>by injection</em>, as presented to the Doctors of the <i>Sorbonne</i>, with their consultation thereupon, it is as follows.</p>
 					<p><a href="chapter-1-20.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
@@ -45,21 +45,31 @@
 					<p><abbr>Mr.</abbr> <i>Shandy’s</i> compliments to orators⁠——is very sensible that <i>Slawkenbergius</i> has here changed his metaphor⁠———which he is very guilty of:⁠——that as a translator, <abbr>Mr.</abbr> <i>Shandy</i> has all along done what he could to make him stick to it⁠—but that here ’twas impossible. <a href="slawkenbergius-en.xhtml#noteref-11" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-12" epub:type="endnote">
-					<p>Nonnulli ex nostratibus eadem loquendi formulâ utun. Quinimo &amp; Logistæ &amp; Canonistæ⁠——Vid. Parce Barne Jas in d. L. Provincial. Constitut. de conjec. vid. Vol. Lib. 4. Titul. 1. n. 7. quâ etiam in re conspir. Om de Promontorio Nas. Tichmak. ff. d. tit. 3. fol. 189. passim. Vid. Glos. de contrahend. empt, <abbr>etc.</abbr> necnon J. Scrudr, in cap. § refut. per totum. Cum his cons. Rever. J. Tubal, Sentent. &amp; Prov. cap. 9. ff. 11, 12. obiter. <span epub:type="z3998:roman">V</span>. &amp; Librum, cui Tit. de Terris &amp; Phras. Belg. ad finem, cum comment, N. Bardy Belg. Vid. Scrip. Argentotarens. de Antiq. Ecc. in Episc. Archiv. fid coll. per Von Jacobum Koinshoven Folio Argent. 1583. præcip. ad finem. Quibus add. Rebuff in L. obvenire de Signif. Nom. ff. fol. &amp; de jure Gent. &amp; Civil. de protib. aliena feud. per federa, test. Joha. Luxius in prolegom, quem velim videas, de Analy. Cap. 1, 2, 3. Vid. Idea. <a href="slawkenbergius-en.xhtml#noteref-12" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Nonnulli ex nostratibus eadem loquendi formulâ <abbr>utun.</abbr> Quinimo &amp; Logistæ &amp; Canonistæ⁠——Vid. Parce Barne Jas in <abbr>d. L.</abbr> Provincial. <abbr>Constitut.</abbr> de <abbr>conjec. vid. Vol. Lib.</abbr> 4. <abbr>Titul.</abbr> 1. <abbr>n.</abbr> 7. quâ etiam in re conspir. Om de Promontorio <abbr>Nas. Tichmak. ff. d. tit.</abbr> 3. <abbr>fol.</abbr> 189. <abbr>passim. Vid. Glos.</abbr> de <abbr>contrahend.</abbr> empt, <abbr>etc.</abbr> necnon <abbr class="name">J.</abbr> Scrudr, in cap. § <abbr>refut.</abbr> per totum. Cum his <abbr>cons.</abbr> <abbr>Rever.</abbr> <abbr class="name">J.</abbr> Tubal, <abbr>Sentent.</abbr> &amp; <abbr>Prov.</abbr> <abbr>cap.</abbr> 9. <abbr>ff.</abbr> 11, 12. <abbr>obiter.</abbr> <span epub:type="z3998:roman">V</span> &amp; Librum, cui <abbr>Tit.</abbr> de Terris &amp; <abbr>Phras. Belg.</abbr> ad finem, cum comment, <abbr>N.</abbr> Bardy <abbr>Belg. Vid. Scrip. Argentotarens.</abbr> de <abbr>Antiq. Ecc.</abbr> in <abbr>Episc. Archiv.</abbr> fid <abbr>coll.</abbr> per Von Jacobum Koinshoven Folio Argent. 1583. <abbr>præcip.</abbr> ad finem. Quibus <abbr>add.</abbr> Rebuff in <abbr>L.</abbr> obvenire de <abbr>Signif. Nom. ff. fol.</abbr> &amp; de jure <abbr>Gent.</abbr> &amp; <abbr>Civil.</abbr> de <abbr>protib.</abbr> aliena <abbr>feud.</abbr> per federa, <abbr>test.</abbr> <abbr class="name">Joha.</abbr> Luxius in prolegom, quem velim videas, de <abbr>Analy. Cap.</abbr> 1, 2, 3. <abbr>Vid.</abbr> Idea.</i> <a href="slawkenbergius-en.xhtml#noteref-12" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-13" epub:type="endnote">
 					<blockquote>
-						<p>Hæc mira, satisque horrenda. Planetarum coitio sub Scorpio Asterismo in nona cœli statione, quam Arabes religioni deputabant efficit <i>Martinum Lutherum</i> sacrilegum hereticum, Christianæ religionis hostem acerrimum atque prophanum, ex horoscopi directione ad Martis coitum, religiosissimus obiit, ejus Anima scelestissima ad infernos navigavit⁠—ab Alecto, Tisiphone &amp; Megara flagellis igneis cruciata perenniter.</p>
-						<cite>——Lucas Gaurieus in Tractatu astrologico de præteritis multorum hominum accidentibus per genituras examinatis</cite>
+						<p>
+							<i xml:lang="la">Hæc mira, satisque horrenda. Planetarum coitio sub Scorpio Asterismo in nona cœli statione, quam Arabes religioni deputabant efficit <i>Martinum Lutherum</i> sacrilegum hereticum, Christianæ religionis hostem acerrimum atque prophanum, ex horoscopi directione ad Martis coitum, religiosissimus obiit, ejus Anima scelestissima ad infernos navigavit⁠—ab Alecto, Tisiphone &amp; Megara flagellis igneis cruciata perenniter.</i>
+						</p>
+						<cite>——Lucas Gaurieus in <i epub:type="se:name.publication.book" xml:lang="la">Tractatu astrologico de præteritis multorum hominum accidentibus per genituras examinatis</i></cite>
 					</blockquote>
 					<p><a href="slawkenbergius-en.xhtml#noteref-13" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-14" epub:type="endnote">
-					<p><i>Ce Fœtus</i> n’étoit pas plus grand que la paume de la main; mais son pere l’ayant éxaminé en qualité de Médecin, &amp; ayant trouvé que c’etoit quâlque chose de plus qu’un Embryon, le fit transporter tout vivant à Rapallo, ou il le fit voir à Jerôme Bardi &amp; à d’autres Médecins du lieu. On trouva qu’il ne lui manquoit rien d’essentiel à la vie; &amp; son pere pour faire voir un essai de son experience, entreprit d’achever l’ouvrage de la Nature, &amp; de travailler à la formation de l’Enfant avec le même artifice que celui dont on se sert pour faire écclorre les Poulets en Egypte. Il instruisit une Nourisse de tout ce qu’elle avoit à faire, &amp; ayant fait mettre son fils dans un pour proprement accommodé, il reussit à l’élever &amp; à lui faire prendre ses accroissemens necessaires, par l’uniformité d’une chaleur étrangere mesurée éxactement sur les dégrés d’un Thermométre, ou d’un autre instrument équivalent. (Vide Mich. Giustinian, ne gli Scritt. Liguri à Cart. 223. 488.)</p>
-					<p>On auroit toujours été très satisfait de l’industrie d’un pere si experimenté dans l’Art de la Generation, quand il n’auroit pû prolonger la vie à son fils que pour quelques mois, ou pour peu d’années.</p>
-					<p>Mais quand on se represente que l’Enfant a vecu près de quatre-vingts ans, &amp; qu’il a composé quatre-vingts Ouvrages differents tous fruits d’une longue lecture⁠—il faut convenir que tout ce qui est incroyable n’est pas toujours faux, &amp; que la <i>Vraisemblance n’est pas toujours du côté de la Verité</i>.</p>
-					<p>Il n’avoit que dix neuf ans lorsqu’il composa Gonopsychanthropologia de Origine Animæ humanæ.</p>
-					<p>(Les Enfans celebres, revûs &amp; corrigés par M. de la Monnoye de l’Academie Françoise.) <a href="chapter-4-10.xhtml#noteref-14" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="fr"><i>Ce Fœtus</i> n’étoit pas plus grand que la paume de la main; mais son pere l’ayant éxaminé en qualité de Médecin, &amp; ayant trouvé que c’etoit quâlque chose de plus qu’un Embryon, le fit transporter tout vivant à Rapallo, ou il le fit voir à Jerôme Bardi &amp; à d’autres Médecins du lieu. On trouva qu’il ne lui manquoit rien d’essentiel à la vie; &amp; son pere pour faire voir un essai de son experience, entreprit d’achever l’ouvrage de la Nature, &amp; de travailler à la formation de l’Enfant avec le même artifice que celui dont on se sert pour faire écclorre les Poulets en Egypte. Il instruisit une Nourisse de tout ce qu’elle avoit à faire, &amp; ayant fait mettre son fils dans un pour proprement accommodé, il reussit à l’élever &amp; à lui faire prendre ses accroissemens necessaires, par l’uniformité d’une chaleur étrangere mesurée éxactement sur les dégrés d’un Thermométre, ou d’un autre instrument équivalent. (Vide <abbr class="name">Mich.</abbr> Giustinian, ne gli Scritt. Liguri à Cart. 223. 488.)</i>
+					</p>
+					<p>
+						<i xml:lang="fr">On auroit toujours été très satisfait de l’industrie d’un pere si experimenté dans l’Art de la Generation, quand il n’auroit pû prolonger la vie à son fils que pour quelques mois, ou pour peu d’années.</i>
+					</p>
+					<p>
+						<i xml:lang="fr">Mais quand on se represente que l’Enfant a vecu près de quatre-vingts ans, &amp; qu’il a composé quatre-vingts Ouvrages differents tous fruits d’une longue lecture⁠—il faut convenir que tout ce qui est incroyable n’est pas toujours faux, &amp; que la <em>Vraisemblance n’est pas toujours du côté de la Verité</em>.</i>
+					</p>
+					<p>
+						<i xml:lang="fr">Il n’avoit que dix neuf ans lorsqu’il composa <i epub:type="se:name.publication.paper">Gonopsychanthropologia de Origine Animæ humanæ</i>.</i>
+					</p>
+					<p><i xml:lang="fr">(Les Enfans celebres, revûs &amp; corrigés par <abbr>M.</abbr> de la Monnoye de l’Academie Françoise.)</i> <a href="chapter-4-10.xhtml#noteref-14" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-15" epub:type="endnote">
 					<p>According to the original Editions. <a href="chapter-4-13.xhtml#noteref-15" epub:type="backlink">↩</a></p>
@@ -77,7 +87,7 @@
 					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-19" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-20" epub:type="endnote">
-					<p>Mater non numeratur inter consanguineos, Bald. in ult. C. de Verb. signific. <a href="chapter-4-29.xhtml#noteref-20" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Mater non numeratur inter consanguineos, <abbr>Bald.</abbr> in <abbr>ult. C.</abbr> de <abbr>Verb.</abbr> <abbr class="eoc">signific.</abbr></i> <a href="chapter-4-29.xhtml#noteref-20" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-21" epub:type="endnote">
 					<p>Vide Brook, <abbr>Abridg. Tit. Administr. N.</abbr> 47. <a href="chapter-4-29.xhtml#noteref-21" epub:type="backlink">↩</a></p>
@@ -110,38 +120,40 @@
 					<p>In the first edition, the sixth volume began with this chapter. <a href="chapter-6-1.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
-					<p>Nous aurions quelque interêt, says <i>Baillet</i>, de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠——Le tour est ingénieux, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-31" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="fr">Nous aurions quelque interêt</i>, says <i>Baillet</i>, <i xml:lang="fr">de montrer qu’il n’a rien de ridicule s’il étoit veritable, au moins dans le sens énigmatique que <i>Nicius Erythræus</i> a tâché de lui donner. Cet auteur dit que pour comprendre comme <i>Lipse</i>, il a pû composer un ouvrage le premier jour de sa vie, il faut s’imaginer, que ce premier jour n’est pas celui de sa naissance charnelle, mais celui au quel il a commencé d’user de la raison; il veut que ç’ait été à l’âge de <em>neuf</em> ans; et il nous veut persuader que ce fut en cet âge, que <i>Lipse</i> fit un poëme.⁠——Le tour est ingénieux,</i> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-6-2.xhtml#noteref-31" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-32" epub:type="endnote">
-					<p>Vid. <i>Pellegrina</i>. <a href="chapter-6-5.xhtml#noteref-32" epub:type="backlink">↩</a></p>
+					<p><abbr>Vid.</abbr> <i>Pellegrina</i>. <a href="chapter-6-5.xhtml#noteref-32" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-33" epub:type="endnote">
 					<p>Alluding to the first edition. <a href="chapter-6-40.xhtml#noteref-33" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-34" epub:type="endnote">
-					<p>Vid. Book of French post roads, page 36, edition of 1762. <a href="chapter-7-10.xhtml#noteref-34" epub:type="backlink">↩</a></p>
+					<p><abbr>Vid.</abbr> Book of French post roads, page 36, edition of 1762. <a href="chapter-7-10.xhtml#noteref-34" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-35" epub:type="endnote">
 					<p>Chief Magistrate in Toulouse, <abbr>etc.</abbr> <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-7-17.xhtml#noteref-35" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-36" epub:type="endnote">
-					<p>Non orbis gentem, non urbem gens habet ullam</p>
-					<p>————————ulla parem. <a href="chapter-7-18.xhtml#noteref-36" epub:type="backlink">↩</a></p>
+					<p>
+						<i xml:lang="la">Non orbis gentem, non urbem gens habet ullam</i>
+					</p>
+					<p><i xml:lang="la">————————ulla parem.</i> <a href="chapter-7-18.xhtml#noteref-36" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-37" epub:type="endnote">
-					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—Vid. <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-37" epub:type="backlink">↩</a></p>
+					<p>The same Don <i>Pringello</i>, the celebrated <i>Spanish</i> architect, of whom my cousin <i>Antony</i> has made such honourable mention in a scholium to the Tale inscribed to his name.⁠—<abbr>Vid.</abbr> <abbr>p.</abbr> 129, small edit. <a href="chapter-7-28.xhtml#noteref-37" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-38" epub:type="endnote">
-					<p>Vid. <a href="chapter-6-40.xhtml">book 6, chapter 40</a>. <a href="chapter-8-1.xhtml#noteref-38" epub:type="backlink">↩</a></p>
+					<p><abbr>Vid.</abbr> <a href="chapter-6-40.xhtml">book 6, chapter 40</a>. <a href="chapter-8-1.xhtml#noteref-38" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-39" epub:type="endnote">
-					<p>Vid. <i>Pope’s</i> Portrait. <a href="chapter-8-2.xhtml#noteref-39" epub:type="backlink">↩</a></p>
+					<p><abbr>Vid.</abbr> <i>Pope’s</i> Portrait. <a href="chapter-8-2.xhtml#noteref-39" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-40" epub:type="endnote">
 					<p>Alluding to the first edition. <a href="chapter-8-6.xhtml#noteref-40" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-41" epub:type="endnote">
-					<p><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.⁠——I know not who. <a href="chapter-8-24.xhtml#noteref-41" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la"><i>Rodope Thracia</i> tam inevitabili fascino instructa, tam exactè oculus intuens attraxit, ut si in illam quis incidisset, fieri non posset, quin caperetur.⁠</i>——I know not who. <a href="chapter-8-24.xhtml#noteref-41" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-42" epub:type="endnote">
 					<p>This will be printed with my father’s Life of <i>Socrates</i>, <abbr>etc.</abbr> <abbr>etc.</abbr> <a href="chapter-8-26.xhtml#noteref-42" epub:type="backlink">↩</a></p>
