--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -23,7 +23,10 @@
 						<a href="chapter-6-40.xhtml#illustration-4">A squiggly line marked A, B, CC CCC, D.</a>
 					</li>
 					<li>
-						<a href="chapter-9-4.xhtml#illustration-5">A squiggly line that indicates the corporal’s flourish.</a>
+						<a href="chapter-6-40.xhtml#illustration-5">A straight line.</a>
+					</li>
+					<li>
+						<a href="chapter-9-4.xhtml#illustration-6">A squiggly line that indicates the corporal’s flourish.</a>
 					</li>
 				</ol>
 			</nav>
