Remove lang italicisations where in MW

--- a/src/epub/text/part-9-dedication.xhtml
+++ b/src/epub/text/part-9-dedication.xhtml
@@ -10,8 +10,8 @@
 			<section id="part-9-dedication" epub:type="dedication">
 				<h2 epub:type="title">A Dedication to a Great Man</h2>
 				<p><b>My Lord</b>,</p>
-				<p>Having, <i xml:lang="la">a priori</i>, intended to dedicate <i epub:type="se:name.publication.book">The Amours of my Uncle Toby</i> to <abbr>Mr.</abbr> ***⁠⸺I see more reasons, <i xml:lang="la">a posteriori</i>, for doing it to Lord *******.</p>
-				<p>I should lament from my soul, if this exposed me to the jealousy of their Reverences; because <i xml:lang="la">a posteriori</i>, in Court-latin, signifies the kissing hands for preferment⁠—or anything else⁠—in order to get it.</p>
+				<p>Having, <i xml:lang="la">a priori</i>, intended to dedicate <i epub:type="se:name.publication.book">The Amours of my Uncle Toby</i> to <abbr>Mr.</abbr> ***⁠⸺I see more reasons, a posteriori, for doing it to Lord *******.</p>
+				<p>I should lament from my soul, if this exposed me to the jealousy of their Reverences; because a posteriori, in Court-latin, signifies the kissing hands for preferment⁠—or anything else⁠—in order to get it.</p>
 				<p>My opinion of Lord ******* is neither better nor worse, than it was of <abbr>Mr.</abbr> ***. Honours, like impressions upon coin, may give an ideal and local value to a bit of base metal; but Gold and Silver will pass all the world over without any other recommendation than their own weight.</p>
 				<p>The same goodwill that made me think of offering up half an hour’s amusement to <abbr>Mr.</abbr> *** when out of place⁠—operates more forcibly at present, as half an hour’s amusement will be more serviceable and refreshing after labour and sorrow, than after a philosophical repast.</p>
 				<p>Nothing is so perfectly <em>amusement</em> as a total change of ideas; no ideas are so totally different as those of Ministers, and innocent Lovers: for which reason, when I come to talk of Statesmen and Patriots, and set such marks upon them as will prevent confusion and mistakes concerning them for the future⁠—I propose to dedicate that Volume to some gentle Shepherd,</p>
