--- a/src/epub/text/part-5-dedication.xhtml
+++ b/src/epub/text/part-5-dedication.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="frontmatter z3998:non-fiction">
+	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="part-5" epub:type="part">
 			<section id="part-5-dedication" epub:type="dedication">
 				<h2 epub:type="title">To the Right Honourable John, Lord Viscount Spencer</h2>
