Add missing semantics to ToC dedication

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/epigraph.xhtml">Epigraph</a>
 				</li>
 				<li>
-					<a href="text/dedication.xhtml">To the Right Honourable Mr. Pitt</a>
+					<a href="text/dedication.xhtml">To the Right Honourable <abbr>Mr.</abbr> Pitt</a>
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml">The Life and Opinions of Tristram Shandy, Gentleman</a>
