--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -232,11 +232,9 @@
 								</li>
 								<li>
 									<a href="text/chapter-3-20.xhtml" epub:type="z3998:roman">XX</a>
-									<ol>
-										<li>
-											<a href="text/chapter-3-20.xhtml#part-3-preface">The Author’s Preface</a>
-										</li>
-									</ol>
+								</li>
+								<li>
+									<a href="text/part-3-preface.xhtml">The Author’s Preface</a>
 								</li>
 								<li>
 									<a href="text/chapter-3-21.xhtml" epub:type="z3998:roman">XXI</a>
